--- a/AccountOwnerServer/nlog.config
+++ b/AccountOwnerServer/nlog.config
@@ -3,11 +3,11 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Trace"
-      internalLogFile="c:\Demologs\internallog.txt">
+      internalLogFile="\Demologs\internallog.txt">
 
     <targets>
         <target name="logfile" xsi:type="File"
-                fileName="c:\Demologs\${shortdate}_logfile.txt"
+                fileName="c:Demologs\${shortdate}_logfile.txt"
                 layout="${longdate} ${level:uppercase=true} ${message}"/>
     </targets>
 
